Added tests for login user.

--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ LOCAL_DRIVER_PATH=/Users/jcier/pythonProject/python_sel_env/bin/chromedriver.exe
 #Credentials
 USER_EMAIL=user@email.com
 USER_PASSWORD=Aa111111!!$$
+USER_WRONG_EMAIL=invaliduser@test.com
