Added new test_price_in_cart and lambda function for selectors

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,3 +1,7 @@
 [pytest]
 log_cli=true
 log_level=INFO
+
+markers =
+    regression: mark as regression test.
+    slow_assertions: mark as example for slow assertions
